--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,6 +3,12 @@
     <string name="auth_failed">Autorização Falhou</string>
     <string name="loading">Loading…</string>
     <string name="google_maps_key">AIzaSyDzKvqtNMay4TBKhHyAauXgIl_mcdywEOM</string>
+    <string name="historico01">* Tradução do app Ada:
+        https://play.google.com/store/apps/details?id=com.ada.app
+    </string>
+    <string name="historico02">* Tradução do site Bernhoeft:
+        http://www.bernhoeft.com.br/
+    </string>
 
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
